--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
   ],
   "require": {
     "php": ">=5.4",
+    "joomla/application": "2.0.*@dev",
     "joomla/date": "~1.0",
     "joomla/filesystem": "~1.0",
-    "joomla/language": "~2.0@dev",
-    "joomla/image": "~1.0"
+    "joomla/image": "~1.0",
+    "joomla/utilities": "~1.0",
+    "etdsolutions/language": "@dev"
   },
   "autoload": {
     "psr-4": {
