ajout méthode resize

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "joomla/date": "~1.0",
     "joomla/filesystem": "~1.0",
     "joomla/utilities": "~1.0",
+    "joomla/image": "2.0.*@dev",
     "etdsolutions/language": "@dev"
   },
   "autoload": {
